# aeth-lua

./: .gitignore  CMakeLists.txt  inject.sh
src/: hook.cpp  hook.hpp  main.cpp  mem.hpp  module.cpp  module.hpp  relo.cpp  relo.hpp
src/scripts/: init.lua
src/scripts/functions/: test.lua
src/scripts/functions/hooks/: graphics_hook.lua
src/scripts/sdk/: engine_client.lua  engine_vgui.lua  renderer.lua
